Implementação de componentes carrinho e pagamento, com a API da PayPal.

--- a/src/app/compra/compra.component.html
+++ b/src/app/compra/compra.component.html
@@ -18,7 +18,7 @@
                   <p> Quantidade: {{produto.quantidade}}  </p>
                 </div>
                 <div class=" d-flex justify-content-center d-flex align-items-center "> 
-                    <button class="btn btn-success"> Adicionar ao Carrinho </button>
+                    <button class="btn btn-success" (click) ='compraProduto()'> Adicionar ao Carrinho </button>
                 </div>
               </div>
             
