--- a/src/app/admnavbar/admnavbar.component.html
+++ b/src/app/admnavbar/admnavbar.component.html
@@ -26,7 +26,7 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <p class="nav-link" routerLink='/login'>Olá, {{nome}}</p>
+                <p class="nav-link">Olá, {{nome}}</p>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink='/produto'> <img src="https://i.imgur.com/LvMdQn4.png"
