--- a/src/app/usernavbar/usernavbar.component.html
+++ b/src/app/usernavbar/usernavbar.component.html
@@ -28,14 +28,14 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <p class="nav-link" routerLink='/login'>Olá, {{nome}}</p>
+                <p class="nav-link">Olá, {{nome}}</p>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink='/login'><img src="https://i.imgur.com/pgNaLnn.png"
+                <a class="nav-link" routerLink='/carrinho'><img src="https://i.imgur.com/pgNaLnn.png"
                         alt="Icone Nova Categoria"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" (click)='sair()'><img src="https://i.imgur.com/A5TtITp.png" alt="Icone sair"></a>
+                <a class="nav-link" routerLink='' (click)='sair()'><img src="https://i.imgur.com/A5TtITp.png" alt="Icone sair"></a>
             </li>
         </ul>
     </div>
