Atualização de responsividade do site

--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -62,7 +62,8 @@
       <tr>
         <th class="col-8 " id="aumentaFont" scope="row">Total :</th>
         <td id="afasta">R$163,13 </td>
-        <th id="aumentaFont" scope="row"> <button class="btn btn-primary" routerLink='/pagamento'>Comprar</button> </th>
+        <th id="aumentaFont" scope="row"> <button class="btn btn-primary" routerLink='/pagamento'>Finalizar
+            Compra</button> </th>
       </tr>
     </div>
   </div>
