--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,7 +65,7 @@
     <div id="myCarousel" class="carousel slide mb-5" data-ride="carousel" data-interval="5000">
       <div class="carousel-inner carousel-produtos mx-auto">
         <div class="carousel-item active">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4">
+          <div class="row row-cols-md-4 ">
             <div class="col">
               <div class="card">
                 <a routerLink='/loja'>
@@ -113,7 +113,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4">
+          <div class="row  row-cols-md-4">
             <div class="col">
               <div class="card">
                 <a routerLink='/loja'>
@@ -188,56 +188,51 @@
       </div>
     </div>
 
-
     <!--O que fazemos-->
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12  d-flex justify-content-center ">
-          <div class="container d-flex justify-content-between d-flex align-items-center">
-            <div class="col-6 margemFazemos oQuefazemos">
-              <h2 class="titulos text-center mb-4 ">O QUE FAZEMOS</h2>
-              <p class="texto-esquerda text-justify mr-4">
-                Através da tecnologia queremos que todos se sintam abraçados à cultura e educação. Para isso, criamos a
-                Livraria Abraço, um e-commerce que se conecta a pessoas e instituições, integrando doadores à Escolas,
-                Universidades, ONG's
-                e Bibliotecas públicas. Buscamos facilitar e incentivar a leitura, levando o livro de forma acessivel,
-                atingindo todas as
-                regiões do Brasil.
-                Ao comprar um livro na Livraria Abraço, você estará ajudando para que mais pessoas possam sonhar,
-                contribuindo com o desenvolvimento da cultura e educação.
-
-              </p>
-            </div>
-            <div class="col-6">
-              <img src="https://i.imgur.com/cFyuOd5.jpg" alt="" width="100%">
-            </div>
-          </div>
+    <div class="container">
+      <div class="row d-flex flex-wrap-reverse">
+        <div class="col-md-6 ">
+          <h2 class="titulos text-center mb-4 ">O QUE FAZEMOS</h2>
+          <p class="texto-esquerda text-justify mr-4">
+            Através da tecnologia queremos que todos se sintam abraçados à cultura e educação. Para isso, criamos a
+            Livraria Abraço, um e-commerce que se conecta a pessoas e instituições, integrando doadores à Escolas,
+            Universidades, ONG's
+            e Bibliotecas públicas. Buscamos facilitar e incentivar a leitura, levando o livro de forma acessivel,
+            atingindo todas as
+            regiões do Brasil.
+            Ao comprar um livro na Livraria Abraço, você estará ajudando para que mais pessoas possam sonhar,
+            contribuindo com o desenvolvimento da cultura e educação.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img src="https://i.imgur.com/cFyuOd5.jpg" alt="" width="100%">
         </div>
       </div>
     </div>
     <!--/O que fazemos-->
 
     <div class="row mb-4 mt-5">
-      <div class="col-12 d-flex justify-content-center">
+      <div class="col-md-12 d-flex justify-content-center">
         <hr class="hrDegrade">
       </div>
     </div>
+
     <!--Objetivos-->
     <div class="container-fluid p-0 m-0">
       <div class="row objetivos">
-        <div class="col-12">
+        <div class="col-md-12">
           <h2 class="titulos text-center mb-4">OBJETIVOS</h2>
         </div>
         <div class="container">
-          <div class="col-12 d-flex justify-content-center">
-            <div class="col">
+          <div class="row d-flex justify-content-center">
+            <div class="col-md-4">
               <p>1. Ser referência: o melhor e-commerce de livros, nos consolidando pela confiança e pela boa
                 comunicação.</p>
             </div>
-            <div class="col">
+            <div class="col-md-4">
               <p>2. Ser parceira: ser um ponto de contato entre diversas identidades.</p>
             </div>
-            <div class="col">
+            <div class="col-md-4">
               <p>3. Ser sustentável: Mantendo as melhores relações entre clientes, funcionários e parceiros</p>
             </div>
           </div>
@@ -249,7 +244,7 @@
 
 
     <div class="row mb-5">
-      <div class="col-12 d-flex justify-content-center">
+      <div class="col-md-12 d-flex justify-content-center">
         <hr class="hrDegrade">
       </div>
     </div>
@@ -259,7 +254,7 @@
       <div class="row">
         <div class="col-12 d-flex">
           <div class="row d-flex justify-content-center">
-            <div class="col-4">
+            <div class="col-md-4">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
