--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -33,8 +33,8 @@
             bem-estar e lazer. Com foco em crianças e adolescentes em situações de vulnerabilidade social, criando
             soluções para você cada dia mais abraçar o saber.
         </div>
-        <div class="col-md-4 img-titulo">
-            <img class="ImagemSobrenos" src="https://i.imgur.com/0sxnbU0.jpg" alt="">
+        <div class="col-md-6 img-titulo">
+          <img class="ImagemSobrenos" src="https://i.imgur.com/0sxnbU0.jpg" alt="" style="width: 100%;">
         </div>
 
       </div>
@@ -92,7 +92,7 @@
           </div>
         </div>
 
-        <div id="corDosCards" class="row ">
+        <div id="corDosCards" class="row flex-wrap-reverse">
           <div class="col-sm-6 col-md-6 m-auto">
             <h2 class="text-center text-monospace display-3 text-uppercase font-weight-bold trocaCordoNome ">VISÃO</h2>
             <div>
