--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -252,7 +252,7 @@
     <!--Nossos Parceiros-->
     <div class="container mb-5">
       <div class="row">
-        <div class="col-12 d-flex">
+        <div class="col-md-12 d-flex">
           <div class="row d-flex justify-content-center">
             <div class="col-md-4">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
@@ -286,7 +286,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-4 d-flex align-items-center">
+            <div class="col-md-4 d-flex align-items-center">
               <div class="row ml-3">
                 <h3 class="titulos d-flex justify-content-center">NOSSOS PARCEIROS</h3>
                 <p>A Livraria Abraço atua como amiga de diversas instituições conectadas com a educação, a cultura e o
