Alteração dos icones e hover da navbar.

--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -21,7 +21,7 @@
           <td> <img class="img" src="https://images-na.ssl-images-amazon.com/images/I/A1VLAgenDNL.jpg" alt=""> Os Irmãos
             Karamazov </td>
           <td>Fiódor Dostoiévski </td>
-          <td> R$ 25,50 </td>
+          <td> R$ 25,50</td>
         </tr>
 
         <tr>
@@ -61,7 +61,7 @@
     <div class="table ">
       <tr>
         <th class="col-8 " id="aumentaFont" scope="row">Total :</th>
-        <td id="afasta">R$163,13 </td>
+        <td id="afasta" style="color: #005186;">R$163,13 </td>
         <th id="aumentaFont" scope="row"> <button class="btn btn-primary" routerLink='/pagamento'>Finalizar
             Compra</button> </th>
       </tr>
