--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -1,26 +1,17 @@
-<!--Jumbotron-->
+ <!--Jumbotron-->
 <div class="container-fluid mt-5">
   <div class="row">
     <div class="col-md-12">
-      <div class="sloganImg w-100">
-        <img src="https://i.imgur.com/pPJOvih.png" alt="" class="w-100" />
-        <div class="sloganText col-6">
-          <h2>Um carinho para o saber</h2>
-          <h4>Quando abraçamos o conhecimento, todos nós ganhamos.</h4>
+        <div class="sloganImg w-100">
+            <img src="https://i.imgur.com/GVwO3lU.png" alt="Imagem com slogan" class="w-100" />
         </div>
-      </div>
     </div>
   </div>
 </div>
 <!--/Jumbotron-->
 
-
-
-
-
 <div id="alinhaNomeio">
-  <div id="alinhatd">
-
+<div id="alinhatd">
 
     <!--/Sobre nós-->
     <div class="container mt-5 bg-white">
