--- a/src/app/loja/loja.component.html
+++ b/src/app/loja/loja.component.html
@@ -7,13 +7,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="sloganImg w-100">
-                        <img src="https://i.imgur.com/pPJOvih.png" alt="" class="w-100" />
-                        <div class="sloganText col-6 d-block">
-                            <div class="container">
-                                <h2>Um carinho para o saber</h2>
-                                <h4>Quando abraçamos o conhecimento, todos nós ganhamos. </h4>
-                            </div>
-                        </div>
+                        <img src="https://i.imgur.com/GVwO3lU.png" alt="Imagem com slogan" class="w-100" />
                     </div>
                 </div>
             </div>
