Atualização de Footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,3 +11,5 @@
 <app-rodape *ngIf='lojaRoute()'></app-rodape>
 
 <app-rodape *ngIf='sobreNosRoute()'></app-rodape>
+
+<app-rodape *ngIf='pagamentoRoute()'></app-rodape>
