--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,4 @@
 
 <router-outlet></router-outlet>
 
-<app-rodape *ngIf='homeRoute()'></app-rodape>
-
-<app-rodape *ngIf='lojaRoute()'></app-rodape>
-
-<app-rodape *ngIf='sobreNosRoute()'></app-rodape>
-
-<app-rodape *ngIf='pagamentoRoute()'></app-rodape>
+<app-rodape></app-rodape>
