--- a/src/app/loja-categoria/loja-categoria.component.html
+++ b/src/app/loja-categoria/loja-categoria.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid mt-5"> 
+<div class="container-fluid mt-5">
+
     <body>
         <!--Jumbotron-->
         <div class="container-fluid">
@@ -23,15 +24,15 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <input type="text" class="form-control" id="titulo" placeholder="Digite o título para pesquisar"
-                        [(ngModel)]='tituloProdutoCategoria' (keyup)=' findByTituloProdutoCategoria()' >
+                        [(ngModel)]='tituloProdutoCategoria' (keyup)=' findByTituloProdutoCategoria()'>
                 </div>
             </div>
         </div>
         <!--/Campo de Pesquisa-->
 
-        
-         <!--Produtos-->
-         <div class="row d-flex justify-content-center">
+
+        <!--Produtos-->
+        <div class="row d-flex justify-content-center">
             <div class="col-2 ml-2 mt-5">
                 <h3 class="mb-1" style="color: #005186">Categorias</h3>
                 <ul class="list-group list-group-flush">
@@ -39,7 +40,8 @@
                 </ul>
                 <ul class="list-group list-group-flush"
                     *ngFor='let itemCategoria of listaCategoria | orderBy : key : reverse'>
-                    <a [routerLink]="['/loja-categoria',itemCategoria.genero]" (click)='findByGeneroProduto(itemCategoria.genero)'
+                    <a [routerLink]="['/loja-categoria',itemCategoria.genero]"
+                        (click)='findByGeneroProduto(itemCategoria.genero)'
                         class="list-group-item list-group-item-action">{{itemCategoria.genero}}</a>
                 </ul>
             </div>
@@ -48,10 +50,10 @@
                 <div class="card cardProdutos text-center" *ngFor='let item of listaCategoriaFiltrada'>
                     <div class="card-body">
                         <a [routerLink]="['/compra',item.id]"><img src="{{item.imagem}}" alt=""
-                            class="imgLivro mt-4" /></a>
+                                class="imgLivro mt-4" /></a>
                         <h5 class="card-title mt-2 text-left ml-2"> {{item.nome}} </h5>
                         <h6 class="card-title mt-2 text-left ml-2"> {{item.autor}} </h6>
-                        <p class="card-text text-left ml-2">R$ {{item.preco}} </p>
+                        <p class="card-text text-left ml-2">{{item.preco | currency:'BRL'}} </p>
                     </div>
                     <div class="card-footer mt-2">
                         <a [routerLink]="['/compra', item.id ]" class="button mb-5">Comprar</a>
@@ -62,7 +64,7 @@
 
         <!--/Produtos-->
 
-        
+
 
 
 
@@ -70,5 +72,3 @@
 
 
 </div>
-
-
