Finalização do projeto

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -84,7 +84,7 @@
                 </a>
                 <div class="card-body">
                   <p class="card-title font-weight-bold m-0">Dom Casmurro</p>
-                  <p class="card-text">Machardo de Assis</p>
+                  <p class="card-text">Machado de Assis</p>
                 </div>
               </div>
             </div>
@@ -224,16 +224,18 @@
           <h2 class="titulos text-center mb-4">OBJETIVOS</h2>
         </div>
         <div class="container">
-          <div class="row d-flex justify-content-center">
+          <div class="row d-flex justify-content-center ">
             <div class="col-md-4">
-              <p>1. Ser referência: o melhor e-commerce de livros, nos consolidando pela confiança e pela boa
+              <p class="textoObjetivos">1. Ser referência: o melhor e-commerce de livros, nos consolidando pela
+                confiança e pela boa
                 comunicação.</p>
             </div>
             <div class="col-md-4">
-              <p>2. Ser parceira: ser um ponto de contato entre diversas identidades.</p>
+              <p class="textoObjetivos">2. Ser parceira: ser um ponto de contato entre diversas identidades.</p>
             </div>
             <div class="col-md-4">
-              <p>3. Ser sustentável: Mantendo as melhores relações entre clientes, funcionários e parceiros</p>
+              <p class="textoObjetivos">3. Ser sustentável: Mantendo as melhores relações entre clientes, funcionários e
+                parceiros</p>
             </div>
           </div>
         </div>
@@ -289,7 +291,8 @@
             <div class="col-md-4 d-flex align-items-center">
               <div class="row ml-3">
                 <h3 class="titulos d-flex justify-content-center">NOSSOS PARCEIROS</h3>
-                <p>A Livraria Abraço atua como amiga de diversas instituições conectadas com a educação, a cultura e o
+                <p class="textosParceiros">A Livraria Abraço atua como amiga de diversas instituições conectadas com a
+                  educação, a cultura e o
                   bem-estar.</p>
               </div>
             </div>
