--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -18,7 +18,7 @@
           <li>R. Recreio, 02 - 14º Andar</li>
           <li>São Paulo, SP</li>
           <li>+55 11 98765-4321</li>
-          <li><a href="#">livrariaabraco@recreio.com.br</a></li>
+          <li><a href="#">livrariaabraco02@gmail.com</a></li>
         </ul>
         <h6>Redes Sociais</h6>
         <ul class="social-icons d-flex justify-content-start">
