--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -1,17 +1,17 @@
- <!--Jumbotron-->
+<!--Jumbotron-->
 <div class="container-fluid mt-5">
   <div class="row">
     <div class="col-md-12">
-        <div class="sloganImg w-100">
-            <img src="https://i.imgur.com/GVwO3lU.png" alt="Imagem com slogan" class="w-100" />
-        </div>
+      <div class="sloganImg w-100">
+        <img src="https://i.imgur.com/GVwO3lU.png" alt="Imagem com slogan" class="w-100" />
+      </div>
     </div>
   </div>
 </div>
 <!--/Jumbotron-->
 
 <div id="alinhaNomeio">
-<div id="alinhatd">
+  <div id="alinhatd">
 
     <!--/Sobre nós-->
     <div class="container mt-5 bg-white">
@@ -135,9 +135,8 @@
                   <h3>Daniel Filho</h3>
                   <h5>Full stack developer jr.</h5>
                   <p class="mt-3 mb-3">
-                    Persistente, engraçado, regrado e pontual
-                    meu objetivo é me aprofundar mais e mais nessa área
-                    maravilhosa.
+                    Persistente, engraçado, regrado e pontual.
+                    Tem como principal objetivo se aprofundar na área de tecnologia.
                   </p>
                   <footer class="mt-3">
                     <a target="_blank" id="aumentaIconsInsta" href="https://www.instagram.com/glicogomes/"><img
@@ -161,9 +160,8 @@
                     class="foto img-fluid rounded-circle w-50 mb-3 mt-3">
                   <h3>Danilo Pereira</h3>
                   <h5>Full stack developer jr.</h5>
-                  <p class="mt-3 mb-3">Sou analítico, comunicativo e criativo. Com linhas de código, intercâmbio
-                    conhecimentos
-                    e procuro resolver problemas.
+                  <p class="mt-3 mb-3">Analítico, comunicativo e criativo. Com linhas de código, intercambio
+                    conhecimentos, procurando resolver problemas.
                   </p>
                   <footer class="mt-3">
                     <a id="aumentaIconsInsta" href="https://www.instagram.com/danilo.pereira123/" target="_blank"><img
@@ -184,8 +182,8 @@
                   <img src="https://i.imgur.com/Nh8oEvS.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3 mt-3">
                   <h3>Gustavo Rabelo</h3>
                   <h5>Full stack developer jr.</h5>
-                  <p class="mt-3 mb-3">Experiência como analista de suporte, focando em entrar na área de
-                    desenvolvimento. Leal e estável, considera a todo aprendizado util e uma boa jornada.</p>
+                  <p class="mt-3 mb-3">Focado em entrar na área de desenvolvimento, sincero, leal e persistente. Aberto
+                    a aprender novas tecnologias para chegar ao meus objetivos.</p>
                   <footer>
                     <a id="aumentaIconsInsta" href="https://www.instagram.com/guhh.rabelo" target="_blank"><img
                         height="47px" width="47px" src="https://i.imgur.com/mxQhjrW.gif" alt=""></a>
@@ -205,8 +203,8 @@
                   <img src="https://i.imgur.com/54FzKdU.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3 mt-3">
                   <h3>Luiz Felipe</h3>
                   <h5>Full stack developer jr.</h5>
-                  <p class="mt-3 mb-3">Engenheiro Civil em transição de carreira,
-                    desenvolve neste novo caminho novas habilidades para ser um bom desenvolvedor. </p>
+                  <p class="mt-3 mb-3">Engenheiro Civil, apaixonado por tecnologia, com sua organização,
+                    ética, trabalho em equipe e proatividade busca crescer a cada dia como pessoa e profissional. </p>
 
                   <footer>
                     <a id="aumentaIconsInsta" href="https://www.instagram.com/felipe_mag/" target="_blank"><img
