--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -114,6 +114,7 @@ animation: 0.5s draw linear forwards;
 
 .texto-esquerda{
     text-align: left;
+    font-size: 120%;
 }
 
 .margem{
@@ -123,4 +124,13 @@ animation: 0.5s draw linear forwards;
 
 .texto-direita{
     text-align: justify;
+}
+
+
+.textoObjetivos{
+    font-size: 105%;
+}
+
+.textosParceiros{
+    font-size: 105%;
 }
