--- a/src/app/loja-categoria/loja-categoria.component.html
+++ b/src/app/loja-categoria/loja-categoria.component.html
@@ -1,18 +1,12 @@
 <div class="container-fluid mt-5">
 
     <body>
-        <!--Jumbotron-->
-        <div class="container-fluid">
+         <!--Jumbotron-->
+         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
                     <div class="sloganImg w-100">
-                        <img src="https://i.imgur.com/pPJOvih.png" alt="" class="w-100" />
-                        <div class="sloganText col-6 d-block">
-                            <div class="container">
-                                <h2>Um carinho para o saber</h2>
-                                <h4>Quando abraçamos o conhecimento, todos nós ganhamos. </h4>
-                            </div>
-                        </div>
+                        <img src="https://i.imgur.com/GVwO3lU.png" alt="Imagem com slogan" class="w-100" />
                     </div>
                 </div>
             </div>
@@ -33,7 +27,7 @@
 
         <!--Produtos-->
         <div class="row d-flex justify-content-center">
-            <div class="col-2 ml-2 mt-5">
+            <div class="col ml-5 mt-5">
                 <h3 class="mb-1" style="color: #005186">Categorias</h3>
                 <ul class="list-group list-group-flush">
                     <a routerLink='/loja' class="list-group-item list-group-item-action">Todas as Categorias</a>
@@ -46,7 +40,7 @@
                 </ul>
             </div>
 
-            <div class="col-9 ml-5 mt-5">
+            <div class="col-10 mt-5">
                 <div class="card cardProdutos text-center" *ngFor='let item of listaCategoriaFiltrada'>
                     <div class="card-body">
                         <a [routerLink]="['/compra',item.id]"><img src="{{item.imagem}}" alt=""
