Finalização de layouts.

--- a/src/app/carrinho/carrinho.component.css
+++ b/src/app/carrinho/carrinho.component.css
@@ -8,8 +8,7 @@
 .nomeNomeio
 {
     text-align: center;
-    margin-top: 80px;
-
+    margin-top: 13%;
 }
 .img
 {
@@ -30,6 +29,4 @@
 #aumentaFont
 {
     font-size: 25px;
-    
-
 }
